<resources>
    <string name="app_name">VIR Business</string>
    <string name="english">English</string>
    <string name="facebook_app_id">1368451683265629</string>
    <string name="fb_login_protocol_scheme">1368451683265629</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">isPiD0VxcDV1uiw0fsW3YVvaf</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Y8VzT3NZ2JezC2U3dDFJS9UNpxTx6TBKej1oHQ6AJiB7pSlexN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In or Register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions"
    </string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unplug_mobile_cable_from_computer">Please, attach cable to the computer</string>
    <string name="something_went_wrong_please_try_again">Something wrong happen, please try again</string>
    <string name="please_wait_dotted">Please wait ...</string>
    <string name="search">Search</string>
    <string name="you_need_to_grant_required_permissions">You need to grant required permissions</string>
    <string name="no_camera_app_found_in_this_device">No camera app found in this device</string>
    <string name="error_fetching_this_image">Error fetching this image</string>
    <string name="from_gallery">Choose from gallery</string>
    <string name="from_camera">Choose from camera</string>
    <string name="appName">Vir</string>
    <string name="contact_us">Contact us</string>
    <string name="aboutUs">About us</string>
    <string name="settings">Settings</string>
    <string name="logOut">Log out</string>
    <string name="phoneNumber">Phone Number :</string>
    <string name="signUp">Sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Are you forget password ?</string>
    <string name="youHaveAccount">Have account ?</string>
    <string name="creatNow"><u>Create now</u></string>
    <string name="notHaveAccount">Don\'t have an account?</string>
    <string name="MustEnterValue">Must enter required value</string>
    <string name="userName">Username</string>
    <string name="phone">Phone number</string>
    <string name="visitor">Visitor</string>
    <string name="complete_signUp">Complete sign up</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="change_to_english">التحويل الي العربية</string>
    <string name="completeSignUP">Complete Sign Up</string>
    <string name="address">Address</string>
    <string name="title_activity_maps">Map</string>
    <string name="removeImage">Delete photo</string>
    <string name="mustEnterMessage">Must enter message first</string>
    <string name="mustName">Must enter username</string>
    <string name="mustPassword">Must enter password</string>
    <string name="mustPhone">Must enter phone number</string>
    <string name="mustEmail">Must enter Email</string>
    <string name="mustIssue">Must enter your problem</string>
    <string name="MustMoreSix">Password must be more than 6 digits</string>
    <string name="MustMail">Must enter email</string>
    <string name="openGps">Please , turn on GPS</string>
    <string name="connectionFieldTryAgain">Connection error happened ,try again</string>
    <string name="mustEnterAddress">Must enter address</string>
    <string name="emailOrPhone">Email or Phone number</string>
    <string name="update">Update data</string>
    <string name="changeLocation">Change address</string>
    <string name="updateLocation">Update address</string>
    <string name="myAccount">My account</string>
    <string name="cart">Cart</string>
    <string name="areYouWantLogOut">Do You Want To LogOut ?</string>
    <string name="noCategory">Sorry, No Category Available</string>
    <string name="noItems">Sorry, No items in this Category</string>
    <string name="productAdded">Item Added successfully</string>
    <string name="productAddedBefore">This item Added before</string>
    <string name="AED">AED</string>
    <string name="writeWhatYouWant">Write what you want to search about</string>
    <string name="advancedSearch">Advanced Search</string>
    <string name="chooseProvenance">Provenance</string>
    <string name="fastSearch">Fast Search</string>
    <string name="unit">Unit</string>
    <string name="quantity">Qty</string>
    <string name="description">Description</string>
    <string name="buyNow">Buy Now</string>
    <string name="noItemInCart">No Items in the Cart</string>
    <string name="pressAgainToExit">Press again to close</string>
    <string name="totalPrice">Total Price :</string>
    <string name="shippedAt">Shipped At</string>
    <string name="deliveredAt">Delivered At</string>
    <string name="status">Status: </string>
    <string name="noOrders">No Order now</string>
    <string name="offer">Offer</string>
    <string name="carton">Carton</string>
    <string name="buyCarton">Buy Carton</string>
    <string name="buy">Buy</string>
    <string name="orderStatus">Orders Status</string>
    <string name="address_admin">Manage Addresses</string>
    <string name="productsDetails">Items details</string>
    <string name="arabic">عربي</string>
    <string name="areYouWantDeleteAddress">Are you sure you want to delete address ?</string>
    <string name="addressDeleted">Address deleted</string>
    <string name="editAddress">Edit address</string>
    <string name="addressUpdated">Address updated</string>
    <string name="add_new_address">Add new address</string>
    <string name="sendOrder">Send order</string>
    <string name="orderSentSuccessfully">Order sent successfully</string>
    <string name="choose_address">Choose Address</string>
    <string name="send">Send</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="get_in_touch_with">Get in Touch with</string>
    <string name="weReceivedYourMessage">We received your message, Thank you</string>
    <string name="delete">Delete</string>
    <string name="my_favourite">My Favourite</string>
    <string name="contracts">Contracts</string>
    <string name="quick_order">Quick order</string>
    <string name="welcom">Welcome</string>
    <string name="offers">Offers</string>
    <string name="orderNow">Order Now</string>
    <string name="writeYourOrderHere">Write your order here</string>
    <string name="orderedBy">Ordered By</string>
    <string name="shippingBy">Shipping By</string>
    <string name="confirm">Confirm</string>
    <string name="refuse">Refuse</string>
    <string name="mustSpecifyQuantity">Must specify the quantity first</string>
    <string name="products">Products</string>
    <string name="YouShouldSignUpFirst">You should sign up first to complete order</string>
    <string name="SignUpNow">Sign up now</string>
    <string name="notNow">Not Now</string>
    <string name="chooseYourArea">Choose Your Area</string>
    <string name="chooseArea">Choose Area</string>
    <string name="chooseCity">Choose City</string>
    <string name="choose">Choose</string>
    <string name="youNeedToChooseRegionFirst">You need to choose region first</string>
    <string name="changeYourArea">Change your area</string>
    <string name="addToCart">Add to cart</string>
    <string name="confirmOrder">Confirm order</string>
    <string name="delivered">Delivered</string>
    <string name="forDelivery">For Delivery</string>
    <string name="orderAt">Ordered At</string>
    <string name="DeliverAt">Deliver At</string>
    <string name="notes">Notes:</string>
    <string name="deliveryPeriod">Delivery Period:</string>
    <string name="moreDetails">More Details</string>
    <string name="TotalPriceLessThanMinimum">Total price is less than minimum charge</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="notification">Notifications</string>
    <string name="messages">Messages</string>
    <string name="reviews">Reviews</string>
    <string name="my_account">My Account</string>
    <string name="shop_settings">Shop Settings</string>
    <string name="about_vir">About Vir</string>
    <string name="dashboard">Dashboard</string>
    <string name="payments">Payments</string>
    <string name="we_re_sorry">We\'re Sorry!</string>
    <string name="dont_have_control">You don\'t have a full control to manage your store because your subscription is expired</string>
    <string name="renew_subscription">Renew Subscription</string>
    <string name="shop_reports">Shop Reports</string>
    <string name="choode_payment_method">Choose Payment Method</string>
    <string name="choose_payment_period">Choose Payment Plan</string>
    <string name="agree">Agree</string>
    <string name="you_have_to_read_these_policies_before_adding_a_product">You Have to read these policies before adding a product:</string>
    <string name="_1_the_maximum_product_image_width_is_2000px">1. The maximum product image width is 2000px.</string>
    <string name="_2_the_maximum_product_image_size_is_2_mb">2. The maximum product image size is 2 MB.</string>
    <string name="_3_use_only_the_images_with_the_accuracy_and_high_quality">3. Use only the images with the accuracy and high quality.</string>
    <string name="_4_don_t_use_the_image_that_incredibly_shy">4. Don\'t use the image that Incredibly shy.</string>
    <string name="_5_don_t_use_the_images_that_include_person_faces_and_not_suitable_for_the_product_purpose">5. Don\'t use the images that include person faces and not suitable for the product purpose.</string>
    <string name="_6_you_can_use_the_model_image_but_after_face_obliterate">6. You can use the model image but after face obliterate.</string>
    <string name="_7_don_t_use_person_names_in_the_product_name_and_don_t_use_any_incredibly_shy_words">7. Don\'t use person names in the product  name and don\'t use any Incredibly shy words.</string>
    <string name="_8_the_shop_has_the_commitment_with_his_product_price_and_any_sale_price_on_his_product_or_offer">8. The shop has the commitment with his product price and any sale price on his product or offer.</string>
    <string name="_9_vir_administration_has_the_full_right_to_remove_any_image_doesn_t_match_the_policies_without_notify_the_shop_owner">9. VIR Administration has the full right to remove any image doesn\'t match the policies without notify the shop owner.</string>
    <string name="expiration">Expiration:</string>
    <string name="standard">Standard</string>
    <string name="your_plan">Your plan</string>
    <string name="_3_months">3 Months</string>
    <string name="this_your_code_please_use_it_to_renew_your_plan_through_selected_payment_method">This your code, Please use it to renew your plan through selected payment method:</string>
    <string name="confirm_renewal">Confirm Renewal</string>
    <string name="pay_now">Pay Now</string>
    <string name="thanks_your_payment_is_done">Thanks! your payment is done.</string>
    <string name="we_are_glad_you_joined_vir_family_we_hope_you_enjoy_with_us_vir_works_hard_to_make_your_business_successful">We are glad you joined Vir family. We hope you enjoy with us. Vir works hard to make your business successful.</string>
    <string name="go_to_your_account_now">Go to your account now</string>
</resources>