<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_toolbar"></include>
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/noun_1656248_cc"
        />

    <TextView
        android:id="@+id/tv_success_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:text="@string/thanks_your_payment_is_done"
        />

    <TextView
        android:id="@+id/tv_success_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_margin="5dp"
        android:text="@string/we_are_glad_you_joined_vir_family_we_hope_you_enjoy_with_us_vir_works_hard_to_make_your_business_successful"
        />

    <Button
        android:id="@+id/btn_finishPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_renew"
        android:text="@string/go_to_your_account_now"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:textSize="16dp" />
</LinearLayout>

</LinearLayout>
