<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.accuragroup.eg.VirAdmin.activities.AddPaymentScreenActivity">

    <include layout="@layout/view_toolbar"></include>

    <RelativeLayout
        android:id="@+id/lay_main_addpay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_payment_method"
                        style="@style/MyEditText"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:drawableEnd="@drawable/ic_dropdown_arrow"
                        android:focusable="false"
                        android:padding="8dp"
                        android:gravity="start|center"
                        android:text="@string/choode_payment_method"
                        android:drawableRight="@drawable/ic_dropdown_arrow" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_payment_plan"
                        style="@style/MyEditText"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:drawableEnd="@drawable/ic_dropdown_arrow"
                        android:drawableRight="@drawable/ic_dropdown_arrow"
                        android:focusable="false"
                        android:gravity="start|center"
                        android:padding="8dp"
                        android:text="@string/choose_payment_period" />


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/lay_renewPlan"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/tv_addofferborder"
                    >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/your_plan"
                            android:layout_marginTop="15dp"
                            android:textColor="@color/black"
                            />


                        <TextView
                            android:id="@+id/tv_paymentPlan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/standard"
                            android:textColor="#2196F3"
                            android:layout_marginBottom="8dp"
                            android:textSize="40dp"
                            />
                        <TextView
                            android:id="@+id/tv_paymentDuration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_3_months"                        android:layout_marginBottom="20dp"
                            android:textColor="@color/black"
                            />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        >
                        <TextView
                            android:id="@+id/tv_ExpirationText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/expiration"
                            android:textSize="16dp"
                            android:textColor="@color/black"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            />
                        <TextView
                            android:id="@+id/tv_EpirationTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="05 - 04 - 2018"
                            android:textSize="16dp"
                            android:textColor="@color/black"

                            />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_paymentPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="500"                        android:layout_marginBottom="20dp"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        />
                    <Button
                        android:id="@+id/btn_confirmPayment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_renew"
                        android:text="@string/confirm_renewal"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout

            android:id="@+id/footer"

            android:layout_width="match_parent"

            android:layout_height="135dp"

            android:layout_alignParentBottom="true"

            android:background="#FEF1AA"

            android:visibility="gone"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                >
            <TextView
                android:id="@+id/tv_paymentSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="17dp"
                android:text="@string/this_your_code_please_use_it_to_renew_your_plan_through_selected_payment_method"
                />


            <Button
                android:id="@+id/btn_paymentCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_payment_code"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:text="@string/pay_now"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp" />



            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>




</LinearLayout>
